# wardstone

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENCE  README.md  build.rs  rustfmt.toml  wardstone_bindings.h
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml
crates/cmd/: Cargo.toml  README.md
crates/cmd/src/: adapter.rs  assess.rs  bridge.rs  key.rs  lib.rs  main.rs  primitive.rs  report.rs
crates/cmd/src/key/: certificate.rs  ssh.rs
crates/cmd/src/primitive/: asymmetric.rs  hash.rs  hash_func.rs
crates/cmd/src/testing/: generate_certificates.py
crates/cmd/src/testing/certificates/: ecc_SM2.pem  ecc_brainpoolP160r1.pem  ecc_brainpoolP160t1.pem  ecc_brainpoolP192r1.pem  ecc_brainpoolP192t1.pem  ecc_brainpoolP224r1.pem  ecc_brainpoolP224t1.pem  ecc_brainpoolP256r1.pem  ecc_brainpoolP256t1.pem  ecc_brainpoolP320r1.pem  ecc_brainpoolP320t1.pem  ecc_brainpoolP384r1.pem  ecc_brainpoolP384t1.pem  ecc_brainpoolP512r1.pem  ecc_brainpoolP512t1.pem  ecc_c2pnb163v1.pem  ecc_c2pnb163v2.pem  ecc_c2pnb163v3.pem  ecc_c2pnb176v1.pem  ecc_c2pnb208w1.pem  ecc_c2pnb272w1.pem  ecc_c2pnb304w1.pem  ecc_c2pnb368w1.pem  ecc_c2tnb191v1.pem  ecc_c2tnb191v2.pem  ecc_c2tnb191v3.pem  ecc_c2tnb239v1.pem  ecc_c2tnb239v2.pem  ecc_c2tnb239v3.pem  ecc_c2tnb359v1.pem  ecc_c2tnb431r1.pem  ecc_ed25519.pem  ecc_ed448.pem  ecc_prime192v1.pem  ecc_prime192v2.pem  ecc_prime192v3.pem  ecc_prime239v1.pem  ecc_prime239v2.pem  ecc_prime239v3.pem  ecc_prime256v1.pem  (+50 more)
crates/cmd/src/testing/ssh/: id_ecdsa_256_wardstone.pub  id_ecdsa_384_wardstone.pub  id_ecdsa_521_wardstone.pub  id_ed25519_wardstone.pub  id_rsa_sha2_256_1024_wardstone.pub  id_rsa_sha2_512_1024_wardstone.pub  id_ssh_rsa_1024_wardstone.pub
crates/core/: Cargo.toml  README.md
crates/core/src/: context.rs  ecc.rs  ffc.rs  hash.rs  ifc.rs  lib.rs  primitive.rs  primitives.rs  standard.rs  standards.rs  symmetric.rs  testing.rs
crates/ffi/: Cargo.toml  README.md  build.rs
crates/ffi/src/: context.rs  lib.rs  (+3 more)
examples/ffi/: .clang-format  README.md  main.c
scripts/: generate_certificates.py
src/: context.rs  lib.rs  primitives.rs  standards.rs
src/primitives/: ecc.rs  ffc.rs  hash.rs  ifc.rs  symmetric.rs
src/standards/: bsi.rs  cnsa.rs  ecrypt.rs  lenstra.rs  nist.rs
(+44 files in other folders)
