[package]
name = "wardstone"
version = "0.2.0"
authors = [
	"Dennis Knorr",
	"Martin Sirringhaus",
	"Tshaka Lekholoane <mail+cargo@tshaka.dev>",
]
description = """
A tool to scan cryptographic keys and certificates against recognized 
standards and research publications, verifying their compliance.
"""
edition = "2021"
keywords = ["compliance", "security", "ssh", "tls", "x509"]
license = "ISC"
readme = "README.md"
categories = [
	"command-line-utilities", 
	"config", 
	"cryptography", 
	"development-tools",
]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
once_cell = "1.19"
openssh-keys = "0.6"
openssl = "0.10"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wardstone_core = { path = "../core" }
x509-parser = "0.16"

[lib]
doc = false
